downloaded to jdk17 to improve the jacoco reports, added sonarqube report to the readme and fixed possible misstimming with the cart clean